--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@class/example",
+  "name": "class-css-example",
   "private": true,
-  "version": "1.0.3",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite"
   },
   "dependencies": {
-    "@class/css": "workspace:^1.0.3",
+    "class-css": "workspace:^1.0.0",
     "antd": "^5.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
