--- a/packages/hash/package.json
+++ b/packages/hash/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "@class/hash",
-  "version": "1.0.3",
+  "name": "class-css-hash",
+  "version": "1.0.1",
   "description": "",
   "type": "module",
   "module": "./src/index.ts",
   "types": "./src/index.ts",
   "private": false,
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "eebd337c4985055b5cec322a3b9c46b6c0a4e97e"
 }
