--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
     "packages/*"
   ],
   "scripts": {
+    "clean": "lerna run clean && lerna clean -y ",
     "dev": "lerna run dev --scope class-css-example",
-    "build": "lerna run build --scope class-css-css"
+    "build": "pnpm build:ts && node ./script/build",
+    "build:ts": "lerna run build:ts"
   },
-  "dependencies": {},
   "devDependencies": {
-    "lerna": "^7.3.0"
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-typescript": "^7.23.2",
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "lerna": "^7.3.0",
+    "rimraf": "^5.0.5",
+    "typescript": "^5.0.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
