--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.4",
   "description": "help write css in class",
   "private": false,
+  "type": "module",
+  "types": "./dist-types/index.d.ts",
   "module": "./dist/index.esm.js",
-  "types": "./src/index.ts",
   "scripts": {
-    "build": "webpack -c ./webpack.config.js"
+    "clean": "rimraf ./dist ./dist-types",
+    "build:ts": "rimraf ./dist-types && tsc"
   },
   "keywords": [],
   "author": "tangjiahui-cn",
@@ -15,14 +17,6 @@
     "class-css-cache": "^1.0.4",
     "class-css-hash": "^1.0.4",
     "class-css-stringify": "^1.0.4"
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.23.2",
-    "@babel/preset-typescript": "^7.23.2",
-    "babel-loader": "^9.1.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
   },
   "gitHead": "eebd337c4985055b5cec322a3b9c46b6c0a4e97e"
 }
