--- a/packages/hash/package.json
+++ b/packages/hash/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.4",
   "description": "",
   "type": "module",
-  "module": "./src/index.ts",
-  "types": "./src/index.ts",
+  "types": "./dist-types/index.d.ts",
+  "module": "./dist/index.esm.js",
   "private": false,
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "gitHead": "eebd337c4985055b5cec322a3b9c46b6c0a4e97e"
+  "gitHead": "eebd337c4985055b5cec322a3b9c46b6c0a4e97e",
+  "scripts": {
+    "clean": "rimraf ./dist ./dist-types",
+    "build:ts": "rimraf ./dist-types && tsc"
+  }
 }
