--- a/packages/stringify/tsconfig.json
+++ b/packages/stringify/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2015",
     "esModuleInterop": true,
     "declaration": true,
     "moduleResolution": "node",
@@ -8,5 +8,8 @@
     "baseUrl": ".",
     "declarationDir": "./dist-types"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "ts-node": {
+    "esm": true
+  }
 }
