--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "antd": "^5.10.1",
     "class-css": "workspace:^1.0.12",
+    "class-css-cache": "workspace:^1.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
