--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.13",
   "description": "help write css in class",
   "private": false,
-  "type": "module",
   "types": "./dist-types/index.d.ts",
   "module": "./dist/index.esm.js",
+  "main": "./dist/index.cjs.js",
   "scripts": {
     "clean": "rimraf ./dist ./dist-types",
     "build:ts": "rimraf ./dist-types && tsc"
