--- a/packages/hash/package.json
+++ b/packages/hash/package.json
@@ -2,9 +2,9 @@
   "name": "class-css-hash",
   "version": "1.0.12",
   "description": "",
-  "type": "module",
   "types": "./dist-types/index.d.ts",
   "module": "./dist/index.esm.js",
+  "main": "./dist/index.cjs.js",
   "private": false,
   "keywords": [],
   "author": "",
