--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -1,7 +1,7 @@
 {
   "name": "class-css",
   "version": "1.0.16",
-  "description": "help write css in class",
+  "description": "A css-in-js library, which make your work interesting and easily!",
   "private": false,
   "types": "./dist-types/index.d.ts",
   "module": "./dist/index.esm.js",
