test(.): 添加单元测试

--- a/packages/stringify/tsconfig.json
+++ b/packages/stringify/tsconfig.json
@@ -9,6 +9,7 @@
     "declarationDir": "./dist-types"
   },
   "include": ["src"],
+  "exclude": ["**/__tests*"],
   "ts-node": {
     "esm": true
   }
