--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
     "packages/*"
   ],
   "scripts": {
+    "test": "lerna run test",
     "clean": "lerna run clean && lerna clean -y ",
     "dev": "lerna run dev --scope class-css-example",
     "build": "pnpm build:ts && node ./script/build",
     "build:ts": "lerna run build:ts",
     "postinstall": "pnpm build",
-    "publish-npm": "pnpm build && lerna publish -y patch"
+    "publish-npm": "pnpm test && pnpm build && lerna publish -y patch"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-typescript": "^7.23.2",
+    "@types/jest": "^29.5.6",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
+    "jest": "^29.7.0",
     "lerna": "^7.3.0",
     "rimraf": "^5.0.5",
     "typescript": "^5.0.2",
