--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "class-css-cache": "workspace:^1.0.24",
     "class-css-hash": "^1.0.16",
+    "class-css-render": "workspace:^",
     "class-css-stringify": "^1.0.25"
   },
   "gitHead": "da0f02497f6b3a67ef132b5c94a28265d18d14a8"
